<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_theme"
    tools:context=".LogIn.ConnectingActivity">

    <ImageView
        android:id="@+id/loginSecurityImageView"
        android:layout_width="265dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        app:srcCompat="@drawable/login_security" />

    <TextView
        android:id="@+id/logInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginSecurityImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mazzardsofth_regular"

        android:gravity="center"
        android:text="@string/lets_you_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInTextView"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="25dp">

        <!-- Main -->
        <LinearLayout
            android:id="@+id/otherDetailsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Email -->
            <LinearLayout
                android:id="@+id/emailLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/emailIconImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/icon_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/background_for_text"
                        android:ems="10"
                        android:fontFamily="@font/mazzardsofth_regular"

                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Password -->
            <LinearLayout
                android:id="@+id/passwordLinearLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/passwordIconImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/password_icon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password">

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/background_for_text"
                        android:ems="10"
                        android:fontFamily="@font/mazzardsofth_regular"

                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/background_filled_frame_blue"
                    android:fontFamily="@font/mazzardsofth_regular"

                    android:padding="10dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/background_button_transparent"
                    android:fontFamily="@font/mazzardsofth_regular"

                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/continueWithTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mazzardsofth_regular"

        android:gravity="center"
        android:text="@string/continue_with"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/AuthButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/continueWithTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/icon_facebook" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/google" />

        <Button
            android:id="@+id/microsoftButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/microsoft" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AuthButtonsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dontHaveAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mazzardsofth_regular"

            android:gravity="center"
            android:text="@string/no_account"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@drawable/background_button_transparent"
            android:fontFamily="@font/mazzardsofth_regular"

            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>