<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_theme"
    tools:context=".HomeFragments.ProfileFragmentLayouts.InsideProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_ground_theme"
        tools:context=".LogIn.SignUpActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".LogIn.SignUpActivity">

            <LinearLayout
                android:id="@+id/firstLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/icon_back" />

                <TextView
                    android:id="@+id/pageNametextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/mazzardsofth_regular"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/mainLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/firstLinearLayout"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:id="@+id/FullNameWithPicUserLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/picLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/userImageView"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@drawable/img_empty_profile" />


                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name">

                            <EditText
                                android:id="@+id/firstNameEditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autofillHints="firstName"
                                android:background="@drawable/background_for_text"
                                android:ems="10"
                                android:fontFamily="@font/mazzardsofth_regular"
                                android:inputType="textPersonName"
                                android:padding="12dp"
                                android:text="@string/loading"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name">

                            <EditText
                                android:id="@+id/lastNameEditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autofillHints="lastName"
                                android:background="@drawable/background_for_text"
                                android:ems="10"
                                android:fontFamily="@font/mazzardsofth_regular"
                                android:inputType="textPersonName"
                                android:padding="12dp"
                                android:text="@string/loading"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/otherDetailsLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/FullNameWithPicUserLayout"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:hint="@string/email">

                        <EditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:background="@drawable/background_for_text"
                            android:ems="10"
                            android:fontFamily="@font/mazzardsofth_regular"
                            android:inputType="textEmailAddress"
                            android:padding="12dp"
                            android:text="@string/loading"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/date_of_birth">

                        <EditText
                            android:id="@+id/birthdayEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="date"
                            android:background="@drawable/background_for_text"
                            android:ems="10"
                            android:fontFamily="@font/mazzardsofth_regular"
                            android:inputType="date"
                            android:padding="12dp"
                            android:text="@string/loading"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/phone_number">

                        <EditText
                            android:id="@+id/phoneNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:background="@drawable/background_for_text"
                            android:ems="10"
                            android:fontFamily="@font/mazzardsofth_regular"
                            android:inputType="phone"
                            android:padding="12dp"
                            android:text="@string/loading"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/address">

                        <EditText
                            android:id="@+id/addressEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_for_text"
                            android:ems="10"
                            android:fontFamily="@font/mazzardsofth_regular"
                            android:padding="12dp"
                            android:text="@string/loading"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:hint="@string/loading">

                        <RadioGroup
                            android:id="@+id/genderRadioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/maleRadioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/femaleRadioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />

                        </RadioGroup>

                    </com.google.android.material.textfield.TextInputLayout>
                    <RelativeLayout
                        android:id="@+id/DeleteLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:id="@+id/deleteAccountImageView"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_delete" />
                        <TextView
                            android:id="@+id/deleteAccountTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/deleteAccountImageView"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="35dp"
                            android:fontFamily="@font/mazzardsofth_regular"
                            android:text="@string/delete_account"
                            android:textColor="#FF0000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/icon_right_arrow" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/saveOrEditButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/background_filled_frame_blue"
                        android:clickable="true"
                        android:fontFamily="@font/mazzardsofth_regular"
                        android:padding="10dp"
                        android:text="@string/edit"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <!-- Main -->

        </RelativeLayout>
    </ScrollView>
</FrameLayout>