...
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/img_empty_profile" />
            </RelativeLayout>

                <TextView
                    android:id="@+id/UserFullNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/picLinearLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/mazzardsofth_regular"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/InsideProfileLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
...
